Issue #5: Extended the annotation lines behind the chormosomes to avoid gaps when the chromosome curves.

--- a/common/client/src/main/webapp/html/GeneMap/css/chromosome.css
+++ b/common/client/src/main/webapp/html/GeneMap/css/chromosome.css
@@ -24,3 +24,7 @@
 .chromosome rect.band {
   stroke: none;
 }
+
+.chromosome rect.background {
+  fill: #fff;
+}
